# linkedinscraper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  FLASK_UI.md  FLASK_UI_README.md  README.md  config.yaml  docker-compose.yaml  main.py  preferences.yaml  preferences.yaml.example  pyproject.toml  title.yaml
.github/workflows/: create issue if failed.yaml  pre-commit.yaml  ruff.yml
changelogs/: 1.0.0.md
config/: config.json  preferences.yaml.example
readme_generation/: README.template  config.yaml  readme_generator.py
readme_generation/data/: built_with.yaml  contact.yaml  contributing.yaml  features.yaml  install.yaml  license.yaml  link.yaml  project_struture.yaml  roadmap.yaml  security_and_privacy.yaml  sources.yaml  title.yaml  troubleshooting.yaml  usage.yaml
scripts/: export_jobs_data.py  proxy_connection_tester.py
src/: BeautifulSoupEngine.py  ElasticSearchEngine.py  JobScraper.py
src/flask/: Dockerfile  app.py  app_functions.py  flask_functions.py
src/flask/static/: script.js  style.css
src/flask/templates/: index.html
src/job_scraping/: BeaufitulSoupEngine.py  BeautifulSoupEngine.py  ElasticSearchEngine.py  JobScraper.py  config.json
src/ui/: Dockerfile  app.py  flask_functions.py
src/ui/static/: script.js
src/ui/templates/: index.html
src/utils/: ArgParser.py  ElasticSearchEngine.py  LoggerManager.py  common_func.py  logger_config.yaml  time_decorator.py  tools.py
tests/: test_beautiful_soup_engine.py  test_common_func.py  test_job_scraper.py  test_logger_manager.py  test_tools.py
